// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle escaped solidus 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "parts": undefined,
    "raw": "a",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 1,
      },
      "start": Object {
        "column": 2,
        "line": 1,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 1,
      },
      "start": Object {
        "column": 4,
        "line": 1,
      },
    },
    "parts": undefined,
    "raw": "\\"\\\\\\\\\\"",
    "type": "String",
  },
]
`;

exports[`should tokenize complex input 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "# This is a TOML document. Boom.",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 3,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "parts": undefined,
    "raw": "title",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 3,
      },
      "start": Object {
        "column": 6,
        "line": 3,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 3,
      },
      "start": Object {
        "column": 8,
        "line": 3,
      },
    },
    "parts": undefined,
    "raw": "\\"TOML Example\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 5,
      },
      "start": Object {
        "column": 0,
        "line": 5,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 5,
      },
      "start": Object {
        "column": 1,
        "line": 5,
      },
    },
    "parts": undefined,
    "raw": "owner",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 5,
      },
      "start": Object {
        "column": 6,
        "line": 5,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 6,
      },
      "start": Object {
        "column": 0,
        "line": 6,
      },
    },
    "parts": undefined,
    "raw": "name",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 6,
      },
      "start": Object {
        "column": 5,
        "line": 6,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 27,
        "line": 6,
      },
      "start": Object {
        "column": 7,
        "line": 6,
      },
    },
    "parts": undefined,
    "raw": "\\"Tom Preston-Werner\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 7,
      },
      "start": Object {
        "column": 0,
        "line": 7,
      },
    },
    "parts": undefined,
    "raw": "organization",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 7,
      },
      "start": Object {
        "column": 13,
        "line": 7,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 23,
        "line": 7,
      },
      "start": Object {
        "column": 15,
        "line": 7,
      },
    },
    "parts": undefined,
    "raw": "\\"GitHub\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 8,
      },
      "start": Object {
        "column": 0,
        "line": 8,
      },
    },
    "parts": undefined,
    "raw": "bio",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 8,
      },
      "start": Object {
        "column": 4,
        "line": 8,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 58,
        "line": 8,
      },
      "start": Object {
        "column": 6,
        "line": 8,
      },
    },
    "parts": undefined,
    "raw": "\\"GitHub Cofounder & CEO\\\\nLikes tater tots and beer.\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 9,
      },
      "start": Object {
        "column": 0,
        "line": 9,
      },
    },
    "parts": undefined,
    "raw": "dob",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 9,
      },
      "start": Object {
        "column": 4,
        "line": 9,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 9,
      },
      "start": Object {
        "column": 6,
        "line": 9,
      },
    },
    "parts": undefined,
    "raw": "1979-05-27T07:32:00Z",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 56,
        "line": 9,
      },
      "start": Object {
        "column": 27,
        "line": 9,
      },
    },
    "raw": "# First class dates? Why not?",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 11,
      },
      "start": Object {
        "column": 0,
        "line": 11,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 11,
      },
      "start": Object {
        "column": 1,
        "line": 11,
      },
    },
    "parts": undefined,
    "raw": "database",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 11,
      },
      "start": Object {
        "column": 9,
        "line": 11,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 12,
      },
      "start": Object {
        "column": 0,
        "line": 12,
      },
    },
    "parts": undefined,
    "raw": "server",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 12,
      },
      "start": Object {
        "column": 7,
        "line": 12,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 12,
      },
      "start": Object {
        "column": 9,
        "line": 12,
      },
    },
    "parts": undefined,
    "raw": "\\"192.168.1.1\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 13,
      },
      "start": Object {
        "column": 0,
        "line": 13,
      },
    },
    "parts": undefined,
    "raw": "ports",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 13,
      },
      "start": Object {
        "column": 6,
        "line": 13,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 13,
      },
      "start": Object {
        "column": 8,
        "line": 13,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 13,
      },
      "start": Object {
        "column": 10,
        "line": 13,
      },
    },
    "parts": undefined,
    "raw": "8001",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 13,
      },
      "start": Object {
        "column": 14,
        "line": 13,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 20,
        "line": 13,
      },
      "start": Object {
        "column": 16,
        "line": 13,
      },
    },
    "parts": undefined,
    "raw": "8001",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 13,
      },
      "start": Object {
        "column": 20,
        "line": 13,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 13,
      },
      "start": Object {
        "column": 22,
        "line": 13,
      },
    },
    "parts": undefined,
    "raw": "8002",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 13,
      },
      "start": Object {
        "column": 27,
        "line": 13,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 14,
      },
      "start": Object {
        "column": 0,
        "line": 14,
      },
    },
    "parts": undefined,
    "raw": "connection_max",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 14,
      },
      "start": Object {
        "column": 15,
        "line": 14,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 21,
        "line": 14,
      },
      "start": Object {
        "column": 17,
        "line": 14,
      },
    },
    "parts": undefined,
    "raw": "5000",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 15,
      },
      "start": Object {
        "column": 0,
        "line": 15,
      },
    },
    "parts": undefined,
    "raw": "enabled",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 15,
      },
      "start": Object {
        "column": 8,
        "line": 15,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 15,
      },
      "start": Object {
        "column": 10,
        "line": 15,
      },
    },
    "parts": undefined,
    "raw": "true",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 17,
      },
      "start": Object {
        "column": 0,
        "line": 17,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 17,
      },
      "start": Object {
        "column": 1,
        "line": 17,
      },
    },
    "parts": undefined,
    "raw": "servers",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 17,
      },
      "start": Object {
        "column": 8,
        "line": 17,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 66,
        "line": 19,
      },
      "start": Object {
        "column": 2,
        "line": 19,
      },
    },
    "raw": "# You can indent as you please. Tabs or spaces. TOML don't care.",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 20,
      },
      "start": Object {
        "column": 2,
        "line": 20,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 20,
      },
      "start": Object {
        "column": 3,
        "line": 20,
      },
    },
    "parts": Array [
      "servers",
      "alpha",
    ],
    "raw": "servers.alpha",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 20,
      },
      "start": Object {
        "column": 16,
        "line": 20,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 21,
      },
      "start": Object {
        "column": 2,
        "line": 21,
      },
    },
    "parts": undefined,
    "raw": "ip",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 21,
      },
      "start": Object {
        "column": 5,
        "line": 21,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 21,
      },
      "start": Object {
        "column": 7,
        "line": 21,
      },
    },
    "parts": undefined,
    "raw": "\\"10.0.0.1\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 22,
      },
      "start": Object {
        "column": 2,
        "line": 22,
      },
    },
    "parts": undefined,
    "raw": "dc",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 22,
      },
      "start": Object {
        "column": 5,
        "line": 22,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 22,
      },
      "start": Object {
        "column": 7,
        "line": 22,
      },
    },
    "parts": undefined,
    "raw": "\\"eqdc10\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 24,
      },
      "start": Object {
        "column": 2,
        "line": 24,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 24,
      },
      "start": Object {
        "column": 3,
        "line": 24,
      },
    },
    "parts": Array [
      "servers",
      "beta",
    ],
    "raw": "servers.beta",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 24,
      },
      "start": Object {
        "column": 15,
        "line": 24,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 25,
      },
      "start": Object {
        "column": 2,
        "line": 25,
      },
    },
    "parts": undefined,
    "raw": "ip",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 25,
      },
      "start": Object {
        "column": 5,
        "line": 25,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 25,
      },
      "start": Object {
        "column": 7,
        "line": 25,
      },
    },
    "parts": undefined,
    "raw": "\\"10.0.0.2\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 26,
      },
      "start": Object {
        "column": 2,
        "line": 26,
      },
    },
    "parts": undefined,
    "raw": "dc",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 26,
      },
      "start": Object {
        "column": 5,
        "line": 26,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 26,
      },
      "start": Object {
        "column": 7,
        "line": 26,
      },
    },
    "parts": undefined,
    "raw": "\\"eqdc10\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 27,
      },
      "start": Object {
        "column": 2,
        "line": 27,
      },
    },
    "parts": undefined,
    "raw": "country",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 27,
      },
      "start": Object {
        "column": 10,
        "line": 27,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 27,
      },
      "start": Object {
        "column": 12,
        "line": 27,
      },
    },
    "parts": undefined,
    "raw": "\\"中国\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 49,
        "line": 27,
      },
      "start": Object {
        "column": 17,
        "line": 27,
      },
    },
    "raw": "# This should be parsed as UTF-8",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 29,
      },
      "start": Object {
        "column": 0,
        "line": 29,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 29,
      },
      "start": Object {
        "column": 1,
        "line": 29,
      },
    },
    "parts": undefined,
    "raw": "clients",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 29,
      },
      "start": Object {
        "column": 8,
        "line": 29,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 30,
      },
      "start": Object {
        "column": 0,
        "line": 30,
      },
    },
    "parts": undefined,
    "raw": "data",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 30,
      },
      "start": Object {
        "column": 5,
        "line": 30,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 30,
      },
      "start": Object {
        "column": 7,
        "line": 30,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 30,
      },
      "start": Object {
        "column": 9,
        "line": 30,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 30,
      },
      "start": Object {
        "column": 10,
        "line": 30,
      },
    },
    "parts": undefined,
    "raw": "\\"gamma\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 30,
      },
      "start": Object {
        "column": 17,
        "line": 30,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 30,
      },
      "start": Object {
        "column": 19,
        "line": 30,
      },
    },
    "parts": undefined,
    "raw": "\\"delta\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 27,
        "line": 30,
      },
      "start": Object {
        "column": 26,
        "line": 30,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 30,
      },
      "start": Object {
        "column": 27,
        "line": 30,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 30,
        "line": 30,
      },
      "start": Object {
        "column": 29,
        "line": 30,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 31,
        "line": 30,
      },
      "start": Object {
        "column": 30,
        "line": 30,
      },
    },
    "parts": undefined,
    "raw": "1",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 30,
      },
      "start": Object {
        "column": 31,
        "line": 30,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 34,
        "line": 30,
      },
      "start": Object {
        "column": 33,
        "line": 30,
      },
    },
    "parts": undefined,
    "raw": "2",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 35,
        "line": 30,
      },
      "start": Object {
        "column": 34,
        "line": 30,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 37,
        "line": 30,
      },
      "start": Object {
        "column": 36,
        "line": 30,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 86,
        "line": 30,
      },
      "start": Object {
        "column": 38,
        "line": 30,
      },
    },
    "raw": "# just an update to make sure parsers support it",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 39,
        "line": 32,
      },
      "start": Object {
        "column": 0,
        "line": 32,
      },
    },
    "raw": "# Line breaks are OK when inside arrays",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 33,
      },
      "start": Object {
        "column": 0,
        "line": 33,
      },
    },
    "parts": undefined,
    "raw": "hosts",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 33,
      },
      "start": Object {
        "column": 6,
        "line": 33,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 33,
      },
      "start": Object {
        "column": 8,
        "line": 33,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 34,
      },
      "start": Object {
        "column": 2,
        "line": 34,
      },
    },
    "parts": undefined,
    "raw": "\\"alpha\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 34,
      },
      "start": Object {
        "column": 9,
        "line": 34,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 35,
      },
      "start": Object {
        "column": 2,
        "line": 35,
      },
    },
    "parts": undefined,
    "raw": "\\"omega\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 36,
      },
      "start": Object {
        "column": 0,
        "line": 36,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 38,
      },
      "start": Object {
        "column": 0,
        "line": 38,
      },
    },
    "parts": undefined,
    "raw": "count",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 38,
      },
      "start": Object {
        "column": 6,
        "line": 38,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 38,
      },
      "start": Object {
        "column": 8,
        "line": 38,
      },
    },
    "raw": "{",
    "type": "Curly",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 38,
      },
      "start": Object {
        "column": 10,
        "line": 38,
      },
    },
    "parts": undefined,
    "raw": "a",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 38,
      },
      "start": Object {
        "column": 12,
        "line": 38,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 38,
      },
      "start": Object {
        "column": 14,
        "line": 38,
      },
    },
    "parts": undefined,
    "raw": "1",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 38,
      },
      "start": Object {
        "column": 15,
        "line": 38,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 38,
      },
      "start": Object {
        "column": 17,
        "line": 38,
      },
    },
    "parts": undefined,
    "raw": "b",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 19,
        "line": 38,
      },
      "start": Object {
        "column": 18,
        "line": 38,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 20,
        "line": 38,
      },
      "start": Object {
        "column": 19,
        "line": 38,
      },
    },
    "parts": undefined,
    "raw": "2",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 24,
        "line": 38,
      },
      "start": Object {
        "column": 23,
        "line": 38,
      },
    },
    "raw": ",",
    "type": "Comma",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 38,
      },
      "start": Object {
        "column": 25,
        "line": 38,
      },
    },
    "parts": undefined,
    "raw": "c",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 38,
      },
      "start": Object {
        "column": 27,
        "line": 38,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 30,
        "line": 38,
      },
      "start": Object {
        "column": 29,
        "line": 38,
      },
    },
    "parts": undefined,
    "raw": "3",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 38,
      },
      "start": Object {
        "column": 31,
        "line": 38,
      },
    },
    "raw": "}",
    "type": "Curly",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 40,
      },
      "start": Object {
        "column": 0,
        "line": 40,
      },
    },
    "raw": "# Products",
    "type": "Comment",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 42,
      },
      "start": Object {
        "column": 2,
        "line": 42,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 42,
      },
      "start": Object {
        "column": 3,
        "line": 42,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 42,
      },
      "start": Object {
        "column": 4,
        "line": 42,
      },
    },
    "parts": undefined,
    "raw": "products",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 42,
      },
      "start": Object {
        "column": 12,
        "line": 42,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 42,
      },
      "start": Object {
        "column": 13,
        "line": 42,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 43,
      },
      "start": Object {
        "column": 2,
        "line": 43,
      },
    },
    "parts": undefined,
    "raw": "name",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 43,
      },
      "start": Object {
        "column": 7,
        "line": 43,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 43,
      },
      "start": Object {
        "column": 9,
        "line": 43,
      },
    },
    "parts": undefined,
    "raw": "\\"Hammer\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 44,
      },
      "start": Object {
        "column": 2,
        "line": 44,
      },
    },
    "parts": undefined,
    "raw": "sku",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 44,
      },
      "start": Object {
        "column": 6,
        "line": 44,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 44,
      },
      "start": Object {
        "column": 8,
        "line": 44,
      },
    },
    "parts": undefined,
    "raw": "738594937",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 46,
      },
      "start": Object {
        "column": 2,
        "line": 46,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 46,
      },
      "start": Object {
        "column": 3,
        "line": 46,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 46,
      },
      "start": Object {
        "column": 4,
        "line": 46,
      },
    },
    "parts": undefined,
    "raw": "products",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 46,
      },
      "start": Object {
        "column": 12,
        "line": 46,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 14,
        "line": 46,
      },
      "start": Object {
        "column": 13,
        "line": 46,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 47,
      },
      "start": Object {
        "column": 2,
        "line": 47,
      },
    },
    "parts": undefined,
    "raw": "name",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 47,
      },
      "start": Object {
        "column": 7,
        "line": 47,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 47,
      },
      "start": Object {
        "column": 9,
        "line": 47,
      },
    },
    "parts": undefined,
    "raw": "\\"Nail\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 48,
      },
      "start": Object {
        "column": 2,
        "line": 48,
      },
    },
    "parts": undefined,
    "raw": "sku",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 48,
      },
      "start": Object {
        "column": 6,
        "line": 48,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 48,
      },
      "start": Object {
        "column": 8,
        "line": 48,
      },
    },
    "parts": undefined,
    "raw": "284758393",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 49,
      },
      "start": Object {
        "column": 2,
        "line": 49,
      },
    },
    "parts": undefined,
    "raw": "color",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 49,
      },
      "start": Object {
        "column": 8,
        "line": 49,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 49,
      },
      "start": Object {
        "column": 10,
        "line": 49,
      },
    },
    "parts": undefined,
    "raw": "\\"gray\\"",
    "type": "String",
  },
]
`;

exports[`should tokenize dotted key 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
    "parts": Array [
      "a",
      "b",
      "c",
    ],
    "raw": "a.b.c",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 1,
      },
      "start": Object {
        "column": 6,
        "line": 1,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
]
`;

exports[`should tokenize dotted key with spaces 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
      },
    },
    "raw": "[",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 20,
        "line": 1,
      },
      "start": Object {
        "column": 3,
        "line": 1,
      },
    },
    "parts": Array [
      "a",
      "\\"b.c\\"",
      "'d'",
    ],
    "raw": "a  .  \\"b.c\\" . 'd'",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 1,
      },
      "start": Object {
        "column": 21,
        "line": 1,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 23,
        "line": 1,
      },
      "start": Object {
        "column": 22,
        "line": 1,
      },
    },
    "raw": "]",
    "type": "Bracket",
  },
]
`;

exports[`should tokenize multiline strings 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 2,
      },
      "start": Object {
        "column": 4,
        "line": 2,
      },
    },
    "parts": undefined,
    "raw": "a",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 2,
      },
      "start": Object {
        "column": 6,
        "line": 2,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 2,
      },
      "start": Object {
        "column": 8,
        "line": 2,
      },
    },
    "parts": undefined,
    "raw": "\\"b\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 3,
      },
      "start": Object {
        "column": 4,
        "line": 3,
      },
    },
    "parts": undefined,
    "raw": "c",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 3,
      },
      "start": Object {
        "column": 6,
        "line": 3,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 11,
        "line": 3,
      },
      "start": Object {
        "column": 8,
        "line": 3,
      },
    },
    "parts": undefined,
    "raw": "'d'",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 4,
      },
      "start": Object {
        "column": 4,
        "line": 4,
      },
    },
    "parts": undefined,
    "raw": "e",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 4,
      },
      "start": Object {
        "column": 6,
        "line": 4,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 6,
      },
      "start": Object {
        "column": 8,
        "line": 4,
      },
    },
    "raw": "\\"\\"\\"
      f
    \\"\\"\\"",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 7,
      },
      "start": Object {
        "column": 4,
        "line": 7,
      },
    },
    "parts": undefined,
    "raw": "g",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 7,
      },
      "start": Object {
        "column": 6,
        "line": 7,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 9,
      },
      "start": Object {
        "column": 8,
        "line": 7,
      },
    },
    "raw": "'''
      h
    '''",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 10,
      },
      "start": Object {
        "column": 4,
        "line": 10,
      },
    },
    "parts": Array [
      "\\"i\\"",
      "'j'",
      "k",
    ],
    "raw": "\\"i\\".'j'.k",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 10,
      },
      "start": Object {
        "column": 14,
        "line": 10,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 19,
        "line": 10,
      },
      "start": Object {
        "column": 16,
        "line": 10,
      },
    },
    "parts": undefined,
    "raw": "\\"l\\"",
    "type": "String",
  },
]
`;

exports[`should tokenize simple input 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 1,
      },
      "start": Object {
        "column": 0,
        "line": 1,
      },
    },
    "parts": undefined,
    "raw": "a",
    "type": "String",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 3,
        "line": 1,
      },
      "start": Object {
        "column": 2,
        "line": 1,
      },
    },
    "raw": "=",
    "type": "Equal",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 1,
      },
      "start": Object {
        "column": 4,
        "line": 1,
      },
    },
    "parts": undefined,
    "raw": "\\"b\\"",
    "type": "String",
  },
]
`;
